js/js.translator/testData/incremental/invalidation/typeScriptExports/main/m.0.d.ts
declare namespace kotlin_main {
    type Nullable<T> = T | null | undefined
    function box(stepId: number): string;
}
